--- a/admin-services/Dockerfile
+++ b/admin-services/Dockerfile
@@ -7,11 +7,14 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install --production
+# Install dependencies (including dev deps, since prisma generate needs them)
+RUN npm install
 
 # Copy source code
 COPY . .
+
+# Run prisma generate
+RUN npx prisma generate
 
 # Expose port
 EXPOSE 4000
