new admin panel added

--- a/admin-panel/.env
+++ b/admin-panel/.env
@@ -2,6 +2,6 @@
 #REACT_APP_API_URL="https://gpn-admin-microservices.onrender.com/api/admin/"
 
 #Local
-REACT_APP_API_URL="http://localhost:2000/api/admin/"
-REACT_APP_Image_URL="http://localhost:2000/public/"
+REACT_APP_API_URL="http://45.194.3.128:4000/api/admin/"
+REACT_APP_Image_URL="http://45.194.3.128:4000/public/"
 REACT_APP_EDITOR_KEY="smclwfg5rj7brg1ctsyi7tj3etc238wpzj41zt29la5z72g3"
