--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,11 @@ services:
 
     environment:
 
-      - DATABASE_URL=mysql://root:hVAudKbartLeUpMS@ap-south-noi-1-dbaas.acecloudhosting.com:10000/gpndb
+      - DATABASE_URL=mysql://root:hVAudKbartLeUpMS@a7a91424cc419.ap-south-noi-1-dbaas.acecloudhosting.com:10000/gpndb
 
       - NODE_ENV=production
 
-      - DB_HOST=ap-south-noi-1-dbaas.acecloudhosting.com
+      - DB_HOST=a7a91424cc419.ap-south-noi-1-dbaas.acecloudhosting.com
 
       - DB_PORT=10000
 
